# agentic-dev-board

./: .gitignore  CLAUDE.md  QUICKSTART.md  README.md  TODOS.md  install.sh  opencode.json  pyproject.toml  uninstall.sh
.claude/: settings.json
.devboard/: config.yaml
.github/workflows/: ci.yml
.opencode/skills/agentboard-approval/: SKILL.md
.opencode/skills/agentboard-brainstorm/: SKILL.md
.opencode/skills/agentboard-cso/: SKILL.md
.opencode/skills/agentboard-rca/: SKILL.md
.opencode/skills/agentboard-retro/: SKILL.md
.opencode/skills/agentboard-tdd/: SKILL.md
.opencode/skills/agentboard-ui-preview/: SKILL.md
docs/: mcp_tools.md  phases.md  security.md
docs/superpowers/plans/: 2026-04-20-plan-sections-infra-outcome.md
hooks/: activity-log.py  danger-guard.sh  iron-law-check.sh
skills/agentboard-approval/: SKILL.md
skills/agentboard-architecture/: SKILL.md
skills/agentboard-brainstorm/: SKILL.md
skills/agentboard-cso/: SKILL.md
skills/agentboard-dep-audit/: SKILL.md
skills/agentboard-design-review/: SKILL.md
skills/agentboard-eng-review/: SKILL.md
skills/agentboard-execute/: SKILL.md
skills/agentboard-frame/: SKILL.md
skills/agentboard-gauntlet/: SKILL.md
skills/agentboard-intent/: SKILL.md
skills/agentboard-lock/: SKILL.md
skills/agentboard-parallel-review/: SKILL.md
skills/agentboard-plan/: SKILL.md
skills/agentboard-rca/: SKILL.md
skills/agentboard-redteam/: SKILL.md
skills/agentboard-replay/: SKILL.md
skills/agentboard-retro/: SKILL.md
skills/agentboard-stress/: SKILL.md
skills/agentboard-synthesize-dev-review/: SKILL.md
skills/agentboard-synthesize-report/: SKILL.md
skills/agentboard-synthesize-session/: SKILL.md
skills/agentboard-tdd/: SKILL.md
skills/agentboard-ui-preview/: SKILL.md
skills/devboard-approval/: SKILL.md
skills/devboard-brainstorm/: SKILL.md
skills/devboard-cso/: SKILL.md
skills/devboard-dep-audit/: SKILL.md
skills/devboard-eng-review/: SKILL.md
skills/devboard-gauntlet/: SKILL.md
skills/devboard-parallel-review/: SKILL.md
skills/devboard-rca/: SKILL.md
skills/devboard-redteam/: SKILL.md
skills/devboard-replay/: SKILL.md
skills/devboard-retro/: SKILL.md
skills/devboard-tdd/: SKILL.md
skills/devboard-ui-preview/: SKILL.md
src/agentboard/: cli.py  config.py  install.py  mcp_server.py  models.py  uninstall.py
src/agentboard/agents/: base.py  (+10 more)
src/devboard/: cli.py  install.py  mcp_server.py  models.py
tests/: conftest.py  test_agents.py  test_app_phase_flow_bindings.py  test_approval.py  test_approval_outcome_section.py  test_approval_parallel_entry.py  test_approval_screenshots_section.py  test_brainstorm_skill_structure.py  test_capture_store.py  test_checkpoint_validation.py  test_cli_export.py  test_config.py  test_conftest_fixture.py  test_dependencies.py  test_design_review_skill_structure.py  test_dev_file_tree_sparkline.py  test_dev_tab_code_review.py  test_dev_tab_pile_integration.py  test_dev_timeline_render.py  test_docs_structure.py  test_e2e_flow.py  test_event_dedup.py  test_export.py  test_file_store.py  test_fleet_aggregator.py  test_fleet_event_stream.py  test_fleet_row_render.py  test_fleet_screen_pilot.py  test_fleet_screen_redteam.py  test_fleet_view.py  test_gauntlet.py  test_gauntlet_ui_surface_marker.py  test_global_index.py  test_global_store.py  test_graph.py  test_hooks_py_post_tool_use.py  test_hooks_py_session_start.py  test_hooks_py_stop.py  test_hooks_py_user_prompt_submit.py  test_inline_drawer.py  (+96 more)
tests/fixtures/: narrative_golden.md
(+238 files in other folders)
