[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentic-dev-board"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "textual>=0.61",
    "rich>=13",
    "anthropic>=0.34",
    "pydantic>=2.7",
    "langgraph>=0.2",
    "langchain-anthropic>=0.2",
    "pyyaml>=6",
    "gitpython>=3.1",
    "python-frontmatter>=1.1",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.4"]

[project.scripts]
devboard = "devboard.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/devboard"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
