[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentic-dev-board"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "textual>=0.61",
    "rich>=13",
    "pydantic>=2.7",
    "pyyaml>=6",
    "gitpython>=3.1",
    "python-frontmatter>=1.1",
    "mcp>=1.0",
]

[project.optional-dependencies]
# For legacy LangGraph orchestration path (deprecated, kept for reference)
legacy = [
    "anthropic>=0.34",
    "langgraph>=0.2",
    "langchain-anthropic>=0.2",
]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.4"]

[project.scripts]
devboard = "devboard.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/devboard"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
