[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentic-dev-board"
version = "0.2.0"
description = "Claude Code skills + MCP server for rigorous agentic dev — Planning Gauntlet, TDD Iron Law, CSO security review, 4-phase RCA"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "blankroad"}]
requires-python = ">=3.11"
keywords = ["claude-code", "mcp", "tdd", "agents", "agentboard", "gauntlet"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "typer>=0.12",
    "textual>=0.61",
    "rich>=13",
    "pydantic>=2.7",
    "pyyaml>=6",
    "gitpython>=3.1",
    "python-frontmatter>=1.1",
    "mcp>=1.0",
    "rapidfuzz>=3",
]

[project.urls]
Homepage = "https://github.com/blankroad/agentic-dev-board"
Repository = "https://github.com/blankroad/agentic-dev-board"
Issues = "https://github.com/blankroad/agentic-dev-board/issues"

[project.optional-dependencies]
# For legacy LangGraph orchestration path (deprecated, kept for reference)
legacy = [
    "anthropic>=0.34",
    "langgraph>=0.2",
    "langchain-anthropic>=0.2",
]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.4"]

[project.scripts]
agentboard = "agentboard.cli:app"
agentboard-mcp = "agentboard.mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agentboard"]

[tool.hatch.build.targets.wheel.shared-data]
"skills" = "share/agentboard/skills"
"hooks" = "share/agentboard/hooks"

[tool.hatch.build.targets.sdist]
include = ["src", "skills", "hooks", "tests", "README.md", "QUICKSTART.md", "pyproject.toml"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
